Deleted INSTALL-CFG.txt, updated README.txt.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@19079 553898ca-32d5-487a-af8b-6cf4ca579ab4